--- a/conf/map_darkstar.conf
+++ b/conf/map_darkstar.conf
@@ -40,8 +40,8 @@ console_silent: 0
 
 mysql_host:      127.0.0.1
 mysql_port:      3306
-mysql_login:     root
-mysql_password:  root
+mysql_login:     dsp
+mysql_password:  0ld3xiles
 mysql_database:  dspdb
 
 #--------------------------------
