--- a/conf/login_darkstar.conf
+++ b/conf/login_darkstar.conf
@@ -48,8 +48,8 @@ login_auth_port: 54231
 
 mysql_host:      127.0.0.1
 mysql_port:      3306
-mysql_login:     root
-mysql_password:  root
+mysql_login:     dsp
+mysql_password:  0ld3xiles
 mysql_database:  dspdb
 
 #Search Server Port
